--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name:hello-world
-on:push
+name: hello-world
+on: push
 jobs:
   hello-world-jobs:
-    run-on:ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
